// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "rubric": true,
      "scoreActions": "someScoreActions",
      "triggers": Array [],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    "PageOboToSlate",
    "QuestionBankChildOboToSlate",
    "ActionsChildOboToSlate",
    "RubricChildOboToSlate",
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment",
}
`;

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 2`] = `
Object {
  "data": Object {
    "content": Object {
      "rubric": false,
      "scoreActions": "someScoreActions",
      "triggers": Array [
        Object {
          "actions": Array [
            Object {
              "type": "nav:lock",
            },
          ],
          "type": "onNavEnter",
        },
        Object {
          "actions": Array [
            Object {
              "type": "nav:unlock",
            },
          ],
          "type": "onEndAttempt",
        },
        Object {
          "actions": Array [
            Object {
              "type": "nav:unlock",
            },
          ],
          "type": "onNavExit",
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    "PageOboToSlate",
    "QuestionBankChildOboToSlate",
    "ActionsChildOboToSlate",
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": Array [],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 2`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": undefined,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 3`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": Array [],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 4`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": Array [
      Object {
        "type": "someTrigger",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 5`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": undefined,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
